[package]
name = "loutremorph"
version = "0.1.0"
edition = "2021"

[features]
default = ["opener"]

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
csv = "1.2.2"
image = "0.23.14"
indicatif = { version = "0.17.6", features = ["rayon"] }
interpolation = "0.2.0"
lazy_static = "1.4.0"
moving-least-squares-image = { version = "0.1.1", features = ["rayon"] }
moving-least-squares = "0.1.0"
opener = { version = "0.6.1", optional = true }
rayon = "1.7.0"
